--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Title</title>
 </head>
 <body>
-<div>Добавил тестовый блок в задаче Task/1</div>
+<div>Добавил тестовый блок в задаче Task/1 !!!</div>
 </body>
 </html>
